Added fluidic compressor

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -14,3 +14,4 @@ pages:
   - Blocks: 
     - Refinery: Blocks/Refinery.md
     - Cooling Tower: Blocks/Cooling Tower.md
+    - Fluidic Compressor: Blocks/Fluidic Compressor.md
