Possibly fix favicon

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: Buildcraft-Additions
-site_favicon: img/favicon.ico
+site_favicon: favicon.ico
 repo_url: https://github.com/ModDocs/bca
 strict: true
 
